<resources>
    <string name="app_name">E Seva</string>
    <string-array name="dept_names">
        <item>@string/department</item>
        <item>@string/watersupply</item>
        <item>@string/roadmanage</item>
        <item>@string/trafficcontrol</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="status">
        <item>Not Viewed</item>
        <item>In Progreess</item>
        <item>Completed</item>
        <item>Rejected</item>
    </string-array>

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="department_name">DEPARTMENT NAME</string>
    <string name="administrator_s_name">ADMINISTRATOR\'S NAME</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_title_here">Add title here</string>
    <string name="compose_complaint">Compose complaint</string>
    <string name="our_duty_is_to_serve_you">Our duty is to serve you</string>
    <string name="administrator_login">ADMINISTRATOR LOGIN</string>
    <string name="user_login">USER LOGIN</string>
    <string name="if_you_continue_you_are_accepting">If you continue, you are accepting</string>
    <string name="e_seva_terms_and_conditions_and_privacy_policy">E-Seva Terms and Conditions and Privacy Policy</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="holding_no_locality_village">Holding No./ Locality/ Village</string>
    <string name="post_office">Post Office</string>
    <string name="pincode">Pincode</string>
    <string name="police_station">Police Station</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="user_name">USER NAME</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="watersupply">Water Supply</string>
    <string name="roadmanage">Road Management</string>
    <string name="trafficcontrol">Traffic Control</string>
    <string name="e_mail">E-Mail</string>
    <string name="address">Address</string>
    <string name="dashbord">Dashbord</string>
    <string name="complaints">complaints</string>
    <string name="help_feedback">Help/Feedback</string>
    <string name="logout">LogOut</string>
    <string name="logoutmsg">Are you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning!</string>
    <string name="ok">OK</string>
    <string name="DBAcontact">Please contact to DBA For RESET the password.</string>
    <string name="choose_lang">Choose Language</string>
    <string name="add_your_tax_number_here">Add your tax number here</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="image_not_selected">Image not selected</string>
    <string name="successfully_loggedin">Successfully LoggedIn</string>
    <string name="select_department_name_properly">Select department name properly!</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="user_doesn_t_exist">User doesn\'t exist</string>
    <string name="please_provide_all_the_details">Please provide all the details!</string>
    <string name="status_updated">Status updated</string>
    <string name="status_update_failed">Status Update Failed</string>
    <string name="complaint_submitted">Complaint submitted!</string>
    <string name="strat_speaking">Strat Speaking...</string>
    <string name="profile_edit_successful">Profile edit successful!</string>
    <string name="password_reset_link_send">Password reset link send</string>
    <string name="something_went_wrong">Something Went Wrong!</string>
    <string name="password_didn_t_match">Password didn\'t match</string>
    <string name="registration_successful" translatable="false">Registration successful</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="please_provide_an_email">Please provide an Email!</string>
    <string name="image_not_select">image not select</string>
    <string name="successfully_logged_in">Successfully Logged In</string>
    <string name="login_failed">Login failed</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="done">Done</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="forget_password">Forget Password</string>
    <string name="referance_id">Referance id</string>
    <string name="track">track</string>
    <string name="status">Status:</string>
    <string name="title">Title:</string>
    <string name="referance_i_d">Referance id:</string>
    <string name="tax_number">Tax Number:</string>
    <string name="date">Date:</string>
    <string name="statu_s">Status:</string>
    <string name="complaint_details">Complaint Details:</string>
    <string name="update" translatable="false">Update</string>
</resources>