<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/dashbord"
        android:title="@string/dashbord"
        android:icon="@drawable/baseline_dock_24"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/complist"
        android:title="@string/complaints"
        android:icon="@drawable/baseline_list_24"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/helpfeedbck"
        android:title="@string/help_feedback"
        android:icon="@drawable/baseline_support_agent_24"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>
</menu>