<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_page_2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:background="@drawable/translate"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/language_btn"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/imagecard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="20dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="123dp"
            android:layout_height="123dp"
            android:background="@color/teal_200"
            android:src="@drawable/final_logo_edit2__1_" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/qoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="screen"
        android:text="@string/our_duty_is_to_serve_you"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/adlogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/admin_person"
        android:gravity="center_vertical"
        android:text="@string/administrator_login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/userlogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/user_person"
        android:gravity="center_vertical"
        android:text="@string/user_login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/if_you_continue_you_are_accepting"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/e_seva_terms_and_conditions_and_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />


</LinearLayout>